Fixed icon alignment issue

--- a/src/container/Content/Content.scss
+++ b/src/container/Content/Content.scss
@@ -2,7 +2,8 @@
 
 .content {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 
   .icon {
     align-self: center;
