--- a/src/container/FileContainer/FileContainer.scss
+++ b/src/container/FileContainer/FileContainer.scss
@@ -3,6 +3,7 @@
 .file-container {
   display: inline-block;
   position: relative;
+  margin: 0 24px;
 
   .context-menu {
     position: absolute;
